# apple-health-export-parser-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  workout_activity.rs
