[package]
name = "apple-health-export-parser-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = "0.17.11"
memmap2 = "0.9.5"
quick-xml = "0.37.5"
rayon = "1.10.0"
serde = { version =  "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smallstr = { version = "0.3.0", features = ["serde"] }
tempfile = "3.20.0"
zip = "3.0.0"
