[package]
name = "apple-health-export-parser-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
csv = "1.3.1"
dirs = "6.0.0"
indicatif = "0.17.11"
memmap2 = "0.9.5"
quick-xml = "0.37.5"
rayon = "1.10.0"
serde = { version =  "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smallstr = { version = "0.3.0", features = ["serde"] }
tempfile = "3.20.0"
chrono = { version = "0.4", features = ["serde", "alloc"] }
zip = "3.0.0"
